[gd_scene load_steps=5 format=2]

[ext_resource path="res://scrs/sounds/death_sound.wav" type="AudioStream" id=1]
[ext_resource path="res://scrs/scripts/sound_handler.gd" type="Script" id=2]
[ext_resource path="res://scrs/sounds/mixkit-player-jumping-in-a-video-game-2043.wav" type="AudioStream" id=3]
[ext_resource path="res://scrs/sounds/Ghostrifter-Official-Devyzed-Downtown-Glow.mp3" type="AudioStream" id=4]

[node name="sound_handler" type="Node2D"]
position = Vector2( 3, 4 )
script = ExtResource( 2 )

[node name="death_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
bus = "death_sound"

[node name="jump_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "jump_sound"

[node name="game_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "background_music"
